# govuk-search-mcp

./: LICENSE  README.md  justfile  pyproject.toml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  release.yml
src/govuk_search_mcp/: __main__.py  content.py  search.py  server.py
test/integration/: test_content_integration.py  test_mcp_integration.py  test_search_integration.py
test/unit/: test_content.py  test_search.py
